<?xml version="1.0"?>
<package format="3">
  <name>astar_b9</name>
  <version>0.0.1</version>
  <description>ROS 2 package for A* pathfinding</description>

  <maintainer email="hyuna@todo.todo">hyuna</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>Eigen3</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
